--- a/index.html
+++ b/index.html
@@ -1,18 +1,173 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="assets/clndr.css">
     <style>
-        #revenue-chart { border: 1px solid #ccc; width: 600px; }
-    </style>
+        .dashboard { width: 1200px; height: 500px; margin: 0 auto 50px auto; }
+        .dashboard::after { content: none; display: block; clear: both; }
+        .dashboard div { float: left; } 
+        #dashboard-checking-1, #dashboard-checking-2, #dashboard-checking-3 { width: 400px; height: 300px; border: 1px solid #ccc; box-sizing: border-box;}
+     </style>
 </head>
 <body>
+    <div class="dashboard">
+        <h1>President's Dashboard</h1>
+        <div id="dashboard-checking-1"></div>
+        <div id="dashboard-checking-2"></div>
+        <div id="dashboard-checking-3"></div>
+        <div id="dashboard-calendar"></div>
+        <div id="dashboard-contacts-chart"></div>
+        <div id="dashboard-expense-chart"></div>
+    </div>
     <!--Div that will hold the pie chart-->
-    <div id="contacts-chart"></div>
-    <div id="expense-chart"></div>
     <div id="revenue-chart"></div>
     
     <!--Load the AJAX API-->
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">
+    <script type="text/template" id="calendar-tmpl">
+        <div class="clndr-controls">
+            <div class="clndr-previous-button">&lsaquo;</div>
+            <div class="month"><%= month %></div>
+            <div class="clndr-next-button">&rsaquo;</div>
+        </div>
+        <div class="clndr-grid">
+            <div class="days-of-the-week">
+                <% _.each(daysOfTheWeek, function(day) { %>
+                    <div class="header-day"><%= day %></div>
+                <% }); %>
+                <div class="days">
+                    <% _.each(days, function(day, i) { %>
+                        
+                        <div class="<%= day.classes %>" title="<% var x = []; _.each(day.events, function(event) { x.push(event.title) }); print(x); %>"><%= day.day %></div>
+                    <% }); %>
+                </div>
+            </div>
+        </div>
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="assets/clndr.min.js"></script>
+    <script src="https://www.google.com/jsapi"></script>
+    <script>
+
+        var dashboardData = {
+            contacts: {
+                members: 3,
+                vendors_1099: 5,
+                vendors: 5,
+                users: 18
+            },
+            expenses: {
+                programs: {
+                    amount: 20000,
+                    percent: 20
+                },
+                fund_raisers: {
+                    amount: 20000,
+                    percent: 20
+                },
+                administrative: {
+                    amount: 60000,
+                    percent: 60
+                }
+            },
+            briefcase: {
+                count: 15,
+                size: '4.1M'
+            },
+            revenue: {
+                investment_income: {
+                    amount: 55000,
+                    percent: ''
+                },
+                programs: {
+                    amount: 10000,
+                    percent: 10
+                },
+                fund_raisers: {
+                    amount: 25000,
+                    percent: 25
+                },
+                contributions_gifts_grants: {
+                    amount: 10000,
+                    percent: 10
+                }
+            },
+            date_of_last_check_recorded: '02/05/2015',
+            login: {
+                current_month: [
+                    {
+                        login_date: '02/12/2015',
+                        user: 'cvtheory2'
+                    },
+                    {
+                        login_date: '02/10/2015',
+                        user: 'cvtheory2'
+                    },
+                    {
+                        login_date: '02/09/2015',
+                        user: 'rlauer'
+                    },
+                    {
+                        login_date: '02/07/2015',
+                        user: 'markuy'
+                    },
+                    {
+                        login_date: '02/01/2015',
+                        user: 'cvtheory2'
+                    }
+                ],
+                previous_month: [
+                    {
+                        login_date: '01/30/2015',
+                        user: 'cvtheory2'
+                    },
+                    {
+                        login_date: '01/29/2015',
+                        user: 'rlauer'
+                    },
+                    {
+                        login_date: '01/23/2015',
+                        user: 'rlauer'
+                    },
+                    {
+                        login_date: '02/18/2015',
+                        user: 'rlauer'
+                    },
+                    {
+                        login_date: '01/16/2015',
+                        user: 'markuy'
+                    }
+                ]
+            },
+            checking: [
+                {
+                    current_balance: 1890,
+                    reconciliation_date: '01/27/2015',
+                    previous_balance: 1408.60,
+                    name: 'North Peak Soccer Booster',
+                    reconciliation_state: 'current',
+                    trend: '+'
+                },
+                    {
+                    current_balance: 910,
+                    reconciliation_date: '',
+                    previous_balance: 1088.10,
+                    name: 'JV Checking',
+                    reconciliation_state: 'never',
+                    trend: '-'
+                },
+                {
+                    current_balance: 2512.18,
+                    reconciliation_date: 12/10/2014,
+                    previous_balance: 1408.40,
+                    name: 'Varsity Checking',
+                    reconciliation_state: 'late',
+                    trend: '-'
+                }
+            ]
+        };
 
         // Load the Visualization API and the piechart package.
         google.load('visualization', '1.0', {'packages':['corechart']});
@@ -20,54 +175,102 @@
         // Set a callback to run when the Google Visualization API is loaded.
         google.setOnLoadCallback(drawContactChart);
         google.setOnLoadCallback(drawExpenseChart);
-        google.setOnLoadCallback(drawRevenueChart);
+        /*google.setOnLoadCallback(drawRevenueChart);*/
+        $('#dashboard-calendar').clndr({
+            template: $('#calendar-tmpl').html(),
+            events: [
+                {
+                    date: '2015-01-03',
+                    title: 'cvtheory2,'
+                }, 
+                {
+                    date: '2015-01-07',
+                    title: 'markuy,'
+                }, 
+                {
+                    date: '2015-01-14',
+                    title: 'rlauer'
+                },
+                {
+                    date: '2015-01-20',
+                    title: 'markuy'
+                },
+                {
+                    date: '2015-01-29',
+                    title: 'markuy'
+                },
+                {
+                    date: '2015-02-07',
+                    title: 'cvtheory2,'
+                }, 
+                {
+                    date: '2015-02-07',
+                    title: 'markuy,'
+                }, 
+                {
+                    date: '2015-02-14',
+                    title: 'rlauer'
+                },
+                {
+                    date: '2015-02-20',
+                    title: 'markuy'
+                },
+                {
+                    date: '2015-02-22',
+                    title: 'markuy'
+                }
+            ]
+        });
+
+        function loadCalendar() {
+
+        }
 
         // Callback that creates and populates a data table,
         // instantiates the pie chart, passes in the data and
         // draws it.    
         function drawContactChart() {
 
-            var data = [
-                { name: 'Members', count: 3 },
-                { name: 'Vendors 1099', count: 5 },
-                { name: 'Vendors', count: 5 },
-                { name: 'Users', count: 18 }
-            ];
+            var data = dashboardData.contacts;
 
             // Create the data table.
             var contactData = new google.visualization.DataTable();
             contactData.addColumn('string', 'Contacts');
             contactData.addColumn('number', 'Count');
 
-            for(var ctr = 0, len = data.length; ctr < len; ctr++) {
+            /*for(var ctr = 0, len = data.length; ctr < len; ctr++) {
                 contactData.addRow([ data[ctr].name, data[ctr].count ]);
-            }
+            }*/
+
+            contactData.addRow([ 'Members', data.members ]);
+            contactData.addRow([ 'Vendors 1099', data.vendors_1099 ]);
+            contactData.addRow([ 'Vendors', data.vendors ]);
+            contactData.addRow([ 'Users', data.users ]);
 
             // Set chart options
             var options = {
                 title: 'Contacts',
-                width: 1200,
-                height: 600,
-                backgroundColor: '#ccc',
+                width: 390,
+                height: 300,
                 titleTextStyle: {
-                    fontSize: 30
+                    fontSize: 12
                 },
                 legend: {
-                    position: 'left',
+                    position: 'right',
                     textStyle: {
-                        fontSize: 30
+                        fontSize: 12
                     }
                 }
             };
 
             // Instantiate and draw our chart, passing in some options.
-            var chart = new google.visualization.PieChart(document.getElementById('contacts-chart'));
+            var chart = new google.visualization.PieChart(document.getElementById('dashboard-contacts-chart'));
             chart.draw(contactData, options);
         }
 
         function drawExpenseChart() {
 
-            var data = [
+            var data = dashboardData.expenses;[
                 { name: 'Programs', amount: 20000, percent: 20 },
                 { name: 'Fund Raisers', amount: 20000, percent: 20 },
                 { name: 'Administrator', amount: 20000, percent: 60 }
@@ -79,20 +282,23 @@
             expenseData.addColumn('number', 'Amount');
             expenseData.addColumn('number', 'Percent');
 
-            for(var ctr = 0, len = data.length; ctr < len; ctr++) {
+            /*for(var ctr = 0, len = data.length; ctr < len; ctr++) {
                 expenseData.addRow([ data[ctr].name, data[ctr].amount, data[ctr].percent ]);
-            }
+            }*/
+            expenseData.addRow([ 'Programs', data.programs.amount, data.programs.percent ]);
+            expenseData.addRow([ 'Fund Raisers', data.fund_raisers.amount, data.fund_raisers.percent ]);
+            expenseData.addRow([ 'Administrator', data.administrative.amount, data.administrative.percent ]);
 
             // Set chart options
             var options = {
                 title: 'Expense',
-                width: 1200,
-                height: 600,
+                width: 390,
+                height: 300,
                 is3D: true
             };
 
             // Instantiate and draw our chart, passing in some options.
-            var chart = new google.visualization.PieChart(document.getElementById('expense-chart'));
+            var chart = new google.visualization.PieChart(document.getElementById('dashboard-expense-chart'));
             chart.draw(expenseData, options);
         }
 
@@ -118,8 +324,8 @@
             // Set chart options
             var options = {
                 title: 'Expense',
-                width: 600,
-                height: 400,
+                width: 390,
+                height: 300,
                 is3D: true
             };
 
