--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         .checking_account_balance { font-size: 50px; text-align: right; }
         .checking_account_balance_change { text-align: right; font-size: 18px; font-style: italic; }
         .checking_account_reconciliation { margin-top: 120px; }
+
+        .tooltip { background: #E5F2FF; padding: 10px; color: #1874CD; font-family: 'Arial'; font-size: 12px; border: 1px solid #1874CD; }
      </style>
 </head>
 <body>
@@ -45,7 +47,9 @@
                 <% }); %>
                 <div class="days">
                     <% _.each(days, function(day, i) { %>
-                        <div class="<%= day.classes %>" title="<% var x = []; _.each(day.events, function(event) { x.push(event.title) }); print(x); %>"><%= day.day %></div>
+                        <div class="<%= day.classes %>" data-title="<% var x = []; _.each(day.events, function(event) { x.push(event.title) }); print(x); %>">
+                            <%= day.day %><%= (day.events.length) ? '<img src="http://markuy-dev.treasurersbriefcase.com/images/People.png">' : '' %>
+                        </div>
                     <% }); %>
                 </div>
             </div>
@@ -57,9 +61,9 @@
             <p class="checking_account_balance">$<%= current_balance %></p>
             <p class="checking_account_balance_change">
                 <% if(current_balance > previous_balance) { %>
-                    (+<%= (current_balance - previous_balance).toFixed(2) %>)
+                    <img src="https://cdn3.iconfinder.com/data/icons/musthave/24/Stock%20Index%20Up.png">(+<%= (current_balance - previous_balance).toFixed(2) %>)
                 <% } else { %>
-                    (<%= (current_balance - previous_balance).toFixed(2) %>)
+                    <img src="https://cdn3.iconfinder.com/data/icons/musthave/24/Stock%20Index%20Down.png">(<%= (current_balance - previous_balance).toFixed(2) %>)
                 <% } %>
             </p>
             
@@ -218,6 +222,10 @@
                     {
                         date: '2015-01-03',
                         title: 'cvtheory2'
+                    },
+                    {
+                        date: '2015-01-03',
+                        title: 'mark'
                     }, 
                     {
                         date: '2015-01-07',
@@ -245,7 +253,7 @@
                     },  
                     {
                         date: '2015-02-07',
-                        title: 'markuy'
+                        title: 'rob'
                     }, 
                     {
                         date: '2015-02-17',
@@ -261,13 +269,32 @@
                     },
                     {
                         date: '2015-02-20',
-                        title: 'markuy'
+                        title: 'christian'
                     },
                     {
                         date: '2015-02-22',
                         title: 'markuy'
                     }
                 ]
+            });
+
+            $(document).on({
+                mouseenter: function() {
+                     console.log($(this).data('title'));
+                    var users = $(this).data('title').split(',');
+                    var userHTML = '';
+                    _.each(users, function(user) {
+                        userHTML += '<p>' + user + '</p>';
+                    })
+                    $('<div class="tooltip"><div>').html(userHTML).appendTo('body').fadeIn();
+                },
+                mouseleave: function() {
+                     $('.tooltip').remove();
+                }
+            }, '.event').mousemove(function(e) {
+                var mouseX = e.pageX + 20; //Get X coordinates
+                var mouseY = e.pageY - 15; //Get Y coordinates
+                $('.tooltip').css({ top: mouseY, left: mouseX, position: 'absolute', display: 'block' });
             });
         }
 
