--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         .checking_account_balance { font-size: 50px; text-align: right; }
         .checking_account_balance_change { text-align: right; font-size: 18px; font-style: italic; }
         .checking_account_reconciliation { margin-top: 30px; }
+        .checking_account_reconciliation_date { font-size: 12px; font-style: italic; }
+        .event { cursor: pointer; }
 
         .tooltip { background: #E5F2FF; padding: 10px; color: #1874CD; font-family: 'Arial'; font-size: 12px; border: 1px solid #1874CD; }
      </style>
@@ -68,7 +70,7 @@
             </p>
             
             <p class="checking_account_reconciliation">Last Reconciliation</p>
-            <p class="checking_account_reconciliation_date"><%= reconciliation_date %></p>
+            <p class="checking_account_reconciliation_date"><%= (reconciliation_date) ? '<span class="event" data-title="' + reconciliation_date + '">' + moment(reconciliation_date).fromNow() + '</span>' : '' %></p>
         </div>
     </script>
 
@@ -266,6 +268,14 @@
                     {
                         date: '2015-02-15',
                         title: 'rlauer'
+                    }, 
+                    {
+                        date: '2015-02-15',
+                        title: 'markuy'
+                    }, 
+                    {
+                        date: '2015-02-15',
+                        title: 'cvera'
                     },
                     {
                         date: '2015-02-20',
@@ -280,7 +290,7 @@
 
             $(document).on({
                 mouseenter: function() {
-                     console.log($(this).data('title'));
+                    console.log($(this).data('title'));
                     var users = $(this).data('title').split(',');
                     var userHTML = '';
                     _.each(users, function(user) {
