--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="assets/clndr.css">
     <style>
-        * { padding: 0; margin: 0; }
+        * { padding: 0; margin: 0; font-size: 12px; }
         .dashboard { width: 1200px; height: 500px; margin: 0 auto 50px auto; }
         .dashboard::after { content: none; display: block; clear: both; }
         .dashboard div { float: left; } 
@@ -112,7 +112,8 @@
             revenue: {
                 investment_income: {
                     amount: 55000,
-                    percent: ''
+                    amount_in_dollars: '$55,000',
+                    percent: 55
                 },
                 programs: {
                     amount: 10000,
@@ -370,9 +371,9 @@
         function drawExpenseChart() {
 
             var data = dashboardData.expenses;[
-                { name: 'Programs', amount: 20000, percent: 20 },
-                { name: 'Fund Raisers', amount: 20000, percent: 20 },
-                { name: 'Administrator', amount: 20000, percent: 60 }
+                { name: 'Programs',  percent: 20 },
+                { name: 'Fund Raisers', percent: 20 },
+                { name: 'Administrator',  percent: 60 }
             ];
 
             // Create the data table.
@@ -394,7 +395,11 @@
                 width: 400,
                 height: 300,
                 is3D: true,
-                colors: ['#60AFFE', '#1C86EE', '#1874CD']
+                colors: ['#60AFFE', '#1C86EE', '#1874CD'],
+                legend: 'none',
+                titleTextStyle: {
+                    fontSize: 30
+                }
             };
 
             // Instantiate and draw our chart, passing in some options.
@@ -427,7 +432,8 @@
                 width: 400,
                 height: 300,
                 is3D: true,
-                colors: ['#60AFFE', '#1C86EE', '#1874CD', '#104E8B']
+                colors: ['#60AFFE', '#1C86EE', '#1874CD', '#104E8B'],
+                slices: { 0: { offset: 0.1}, 1: { offset: 0.1}, 2: { offset: 0.1}, 3: { offset: 0.1} }
             };
 
             // Instantiate and draw our chart, passing in some options.
